# criterion-hypothesis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
criterion-hypothesis/: Cargo.toml
criterion-hypothesis-core/: Cargo.toml
criterion-hypothesis-core/src/: lib.rs  protocol.rs
criterion-hypothesis-core/src/report/: mod.rs
criterion-hypothesis-core/src/stats/: ttest.rs
criterion-hypothesis-harness/: Cargo.toml
criterion-hypothesis-harness/src/: lib.rs  server.rs
criterion-hypothesis/src/: build.rs  cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs
criterion-hypothesis/src/report/: terminal.rs
criterion-hypothesis/src/source/: git.rs  mod.rs
criterion-hypothesis/src/stats/: mod.rs
criterion-hypothesis/tests/: integration.rs
examples/char-counter/: Cargo.toml
examples/char-counter/benches/: char_bench.rs
examples/char-counter/src/: lib.rs
hypobench/: Cargo.toml
hypobench-core/: Cargo.toml
hypobench-core/src/: lib.rs
hypobench-core/src/report/: json.rs  markdown.rs  mod.rs  schema.rs  terminal.rs
hypobench-core/src/stats/: bootstrap.rs  mod.rs  ttest.rs
hypobench-harness/: Cargo.toml
hypobench-harness/src/: lib.rs  server.rs
hypobench/src/: build.rs  cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs  report.rs
hypobench/src/report/: github_pr_comment.rs  json.rs  markdown.rs  terminal.rs
hypobench/src/source/: git.rs  mod.rs
hypobench/tests/: integration.rs
