[workspace]
members = ["hypobench", "hypobench-harness", "hypobench-core"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lclarkmichalek/hypobench"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Statistics
statrs = "0.18"
rand = { version = "0.9", features = ["small_rng"] }

# Terminal output
colored = "3.0"

# Testing
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
