[package]
name = "criterion-hypothesis-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Custom harness runtime for criterion-hypothesis"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
criterion.workspace = true

[dev-dependencies]
tower.workspace = true
