[package]
name = "criterion-hypothesis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Statistically rigorous A/B testing of benchmarks across commits"

[[bin]]
name = "criterion-hypothesis"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
toml.workspace = true
statrs.workspace = true
colored.workspace = true

[dev-dependencies]
tempfile.workspace = true
