[package]
name = "criterion-hypothesis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Statistically rigorous A/B testing of benchmarks across commits"

[[bin]]
name = "criterion-hypothesis"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
criterion-hypothesis-core = { version = "0.2.0", path = "../criterion-hypothesis-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
toml.workspace = true
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
criterion-hypothesis-harness = { version = "0.2.0", path = "../criterion-hypothesis-harness" }
