[package]
name = "hypobench-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-process HTTP harness for hypobench benchmarks"

[lib]
path = "src/lib.rs"

[dependencies]
hypobench-core = { version = "0.5.0", path = "../hypobench-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true

[dev-dependencies]
tower.workspace = true
