[package]
name = "hypobench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Statistically rigorous A/B testing of benchmarks across commits"

[[bin]]
name = "hypobench"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
hypobench-core = { version = "0.4.0", path = "../hypobench-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
toml.workspace = true
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
hypobench-harness = { version = "0.4.0", path = "../hypobench-harness" }
